Fixed an issue with black background when using dark mode in some extensions/browsers

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: white;
+}
+
 .additional-categories {
   max-height: 0;
   overflow: hidden;
@@ -13,4 +17,3 @@
 .css-md26zr-MuiInputBase-root-MuiOutlinedInput-root {
   padding: 0 !important;
 }
-
